fix scrollbar on all the screens including retina

--- a/scss/molgenis/theme-4/_custom.scss
+++ b/scss/molgenis/theme-4/_custom.scss
@@ -8,7 +8,7 @@
         border-left: 4px solid transparent;
         border-right: 4px solid transparent;
         border-top: 4px solid;
-        content: '';
+        content: "";
         display: inline-block;
         margin-left: 4px;
         margin-top: 22px;
@@ -79,10 +79,9 @@
     -webkit-appearance: none;
 }
 
-// Fix: make scrolling in mobile menu posible
-@media (max-width: 1222px) {
-    .fixed-top {
-        max-height: 100vh;
-        overflow: auto;
-    }
+// Adding scroll to menubar
+.navbar:not(.navbar-expand-md) > .navbar-collapse.show {
+    max-height: 100vh;
+    overflow: auto;
+    padding-bottom: 4rem; // Because of the button below the fold
 }
